Fix post tags white space

--- a/src/scss/sections/_post-content.scss
+++ b/src/scss/sections/_post-content.scss
@@ -182,6 +182,10 @@
   figure {
     margin: 0 0 1.5rem 0;
 
+    > img {
+      margin: 0 auto;
+    }
+
     figcaption {
       padding: 0.5rem 1rem 0;
       font-size: 0.875em;
